@@ -23,8 +23,8 @@
 <bookinfo>
   <title>PHPlot Reference Manual</title>
   <corpauthor>The PHPlot Documentation Team</corpauthor>
-  <releaseinfo>Release &version; for PHPlot-5.0.5</releaseinfo>
-  <copyright><year>2005-2008</year><holder>The PHPlot Documentation Team</holder></copyright>
+  <releaseinfo>Release &version; for PHPlot-5.0.6</releaseinfo>
+  <copyright><year>2005-2009</year><holder>The PHPlot Documentation Team</holder></copyright>
   <legalnotice id="copyright">
     <para>
 Permission to use, copy, modify and distribute this manual
